backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: dkrashi/go-to-do:backend-8.0
          name: go-to-do
          ports:
            - containerPort: 8080
          resources: {}
status: {}
