frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: dkrashi/go-to-do:frontend-4.0
          name: go-to-do
          ports:
            - containerPort: 80
          resources: {}
status: {}
