backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-service
  name: backend-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
status:
  loadBalancer: {}
