frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      nodePort: 30000
      protocol: TCP
      targetPort: 3000
  selector:
    app: frontend
status:
  loadBalancer: {}
